# Aquacommon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_tasks.py
openenv_aquacommons.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
