# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-aquacommons"
version = "0.1.0"
description = "Aquacommons environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "numpy>=1.19.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m aquacommons.server.app
server = "aquacommons.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["aquacommons", "aquacommons.server"]
package-dir = { "aquacommons" = ".", "aquacommons.server" = "server" }